fix: overflows :(

--- a/src/Styles/Hamburger.css
+++ b/src/Styles/Hamburger.css
@@ -26,6 +26,7 @@
     flex-direction: column;
     gap: 5vh;
     padding: 0;
+    overflow-x: hidden;
 }
 
 .ham-list li{
